--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,19 @@ stages:
   - test
   - sast
 
+variables:
+  PIPENV_INSTALL: "pipenv install --skip-lock"
+
 .base:
   image: python:3.7-alpine
   before_script:
+    - apk add --no-cache --update python3-dev  gcc build-base
     - python -m pip install pipenv
-    - pipenv install --dev
+    - ${PIPENV_INSTALL} --dev
+    - export VENV_HOME_DIR=$(pipenv --venv)
+    - source $VENV_HOME_DIR/bin/activate
     - pipenv graph
+    # Fire up the venv
   cache:
     key: ${CI_JOB_NAME}
 
@@ -29,4 +36,5 @@ SAST:
   extends: .base
   stage: sast
   script:
-    bandit -r nekokattpy -n 3
+    - ${PIPENV_INSTALL} bandit
+    - bandit -r nekokattpy -n 3
