--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
+asynctest = "*"
 coverage = "*"
 nose = "*"
 rednose = "*"
 
 [packages]
 aiohttp = "~=3.5.4"
+async_timeout = "~=3.0.1"
 websockets = "~=7.0"
