--- a/nose.cfg
+++ b/nose.cfg
@@ -3,7 +3,7 @@ verbosity=3
 with-doctest=1
 with-coverage=true
 cover-tests=true
-cover-package=nekokattpy
+cover-package=hikari
 cover-html=true
 cover-html-dir=public/coverage
 detailed-errors=true
