--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,31 @@
 stages:
   - test
   - sast
+  - pages
+
+cache:
+    key: ${CI_JOB_NAME}
+    paths:
+      - .venv
+      - .cache/pip
 
 variables:
+  DOCKER_DRIVER: overlay2
   PIPENV_INSTALL: "pipenv install --skip-lock"
+  PIPENV_VENV_IN_PROJECT: "yes"
+  PIP_CACHE_DIR: "${CI_PROJECT_DIR}/.cache/pip"
 
 .base:
   image: python:3.7-alpine
   before_script:
-    - apk add --no-cache --update python3-dev  gcc build-base
+    - apk add --no-cache --update python3-dev gcc build-base
     - python -m pip install pipenv
     - ${PIPENV_INSTALL} --dev
     - export VENV_HOME_DIR=$(pipenv --venv)
     - source $VENV_HOME_DIR/bin/activate
     - pipenv graph
-    # Fire up the venv
-  cache:
-    key: ${CI_JOB_NAME}
 
-Test:
+test-3.7:
   extends: .base
   stage: test
   script:
@@ -28,13 +35,27 @@ Test:
     paths:
       - public/coverage
 
-Test-3.8:
-  extends: Test
+test-3.8:
+  extends: test-3.7
   image: python:3.8-rc-alpine
 
-SAST:
+sast:
   extends: .base
   stage: sast
   script:
     - ${PIPENV_INSTALL} bandit
     - bandit -r hikari -n 3
+
+pages:
+  stage: pages
+  extends: .base
+  script:
+    - cd docs
+    - make clean html
+    - cd ..
+    - mv docs/build/html public -v
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
