--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ pages:
     - cd docs
     - make clean html
     - cd ..
-    - mv docs/build/html public -v
+    - mv docs/build/html/* public -v
   artifacts:
     paths:
       - public
