--- a/Pipfile
+++ b/Pipfile
@@ -7,12 +7,8 @@ name = "pypi"
 asynctest = "*"
 coverage = "*"
 nose = "*"
-rednose = "*"
-sphinx = "*"
-sphinx-autodoc-typehints = "*"
-sphinxcontrib-asyncio = "*"
-sphinx_bootstrap_theme = "*"
 
 [packages]
 aiohttp = "~=3.5.4"
 websockets = "~=7.0"
+pylint = "*"
