Gateway testing begun
- Implemented update_status, update_voice_state and request_guild_members operations in gateway
- Implemented fix for incorrect heartbeat timeout logic
- Begun implementing websocket integration test and will begin unit testing components additionally.
- Added to documentation
- Removed unneeded pipenv dependencies only used by CI

Updated CI and pipenv

Addressed logging issues

Addressing further logger exceptions causing integration tests on CI to break

Removed pipfile lock, nose cfg, pylintrc, switched to pipenv runnning pytest with coverage.

Changes to gateway removing 3.8 deprecated calls

Removed pipenv and reverted to requirements.txt files

Transitioned completely to pytest-asyncio

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 # Python cached sources
 **/__pycache__
 
+# Virtual environments
+.venv/
+
 # Test-generated caches
 .noseids
 .coverage
+cover/
+.tox/
+.pytest_cache/
 
 # CI pages and reports
 public/
@@ -11,3 +17,6 @@ public/
 # PyCharm
 *.iml
 .idea/
+
+# Pipenv
+Pipfile.lock
