--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,33 +5,33 @@ stages:
 cache:
     key: ${CI_JOB_NAME}
     paths:
-      - .venv
-      - .cache/pip
+      - .venv/
+      - .cache/
 
 variables:
   DOCKER_DRIVER: "overlay2"
   PACKAGE: "hikari"
   PIP_CACHE_DIR: "${CI_PROJECT_DIR}/.cache/pip"
-  PIPENV_INSTALL: "pipenv install --skip-lock"
-  PIPENV_VENV_IN_PROJECT: "yes"
 
 .base:
   image: python:3.7-alpine
   before_script:
     - apk add --no-cache --update python3-dev gcc build-base
-    - python -m pip install pipenv
-    - ${PIPENV_INSTALL} --dev
-    - export VENV_HOME_DIR=$(pipenv --venv)
-    - source $VENV_HOME_DIR/bin/activate
-    - pipenv graph
+    - pip install -r requirements.txt -r test-requirements.txt
 
 test-3.7:
   extends: .base
   stage: test
   script:
-    - ${PIPENV_INSTALL} rednose
-    - nosetests --rednose --force-color -c nose.cfg
-  coverage: &cov '/TOTAL:\s+\d+\%/'
+    - >
+      pytest -l -v --color=yes \
+                   --cov-report term-missing \
+                   --cov-report annotate:public/coverage-src \
+                   --cov-report html:public/coverage \
+                   --cov-branch \
+                   --cov=${PACKAGE} tests/
+
+  coverage: '/TOTAL:\s+\d+\%/'
   artifacts:
     paths:
       - public/coverage
@@ -44,7 +44,7 @@ sast:
   extends: .base
   stage: test
   script:
-    - ${PIPENV_INSTALL} bandit
+    - pip install bandit
     - bandit -r ${PACKAGE} -n 3
 
 black:
@@ -58,7 +58,7 @@ black:
 .pages:
   extends: .base
   script:
-    - ${PIPENV_INSTALL} sphinx sphinx-autodoc-typehints sphinxcontrib-asyncio sphinx_bootstrap_theme
+    - pip install sphinx sphinx-autodoc-typehints sphinxcontrib-asyncio sphinx_bootstrap_theme
     - python docs/generate_rst.py . ${PACKAGE} docs/source docs/source/index.rst
     - cd docs
     - make clean html
