--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
 # Python cached sources
-**/__pycache__
+__pycache__/
+*.pyc
 
 # Virtual environments
 .venv/
+venv/
 
-# Test-generated caches
-.noseids
-.coverage
-cover/
-.tox/
-.pytest_cache/
-
-# CI pages and reports
+# CI pages, coverage reports, etc
 public/
 
-# PyCharm
+# PyCharm/IntelliJ-generated files
 *.iml
 .idea/
 
-# Pipenv
-Pipfile.lock
+# Visual Studio Code-generated files
+vscode/
+.settings/
+.project
+
+# Setuptools-generated files
+*.egg-info/
+
+# Tox-generated files
+.tox/
+
+# Coverage-generated files
+.coverage
+
+# PyTest-generated files
+.pytest/
+
+# Pip stuff
+pip-wheel-metadata/
