--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ requires = [
     "setuptools_scm >= 2.0.0, <4",
     "wheel >= 0.29.0",
 ]
-build-backend = 'setuptools.build_meta'
+build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 120
-target_version = ['py36', 'py37', 'py38']
+target_version = ["py36", "py37", "py38"]
 include = ".*py$"
