Removed deprecated param to json.loads and fixed tox.ini to ignore compat.

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ omit =
     # Should contain no useful logic.
     hikari/__init__.py
     # Impossible to fully test on all platforms, as it is implementation specific.
-    hikari/compat.py
+    hikari/_compat.py
 
 [coverage:report]
 skip_covered = True
