--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - test
+  - verify
   - pages
 
 cache:
@@ -23,7 +24,6 @@ cpython3.6:
     - tox -avv
   script:
     - tox
-    - tox -e formatcheck
   coverage: /^TOTAL[\s\d%]+\s(\d+\%)$/
 
 cpython3.7:
@@ -36,7 +36,6 @@ cpython3.7:
     - tox -avv
   script:
     - tox
-    - tox -e formatcheck
   coverage: /^TOTAL[\s\d%]+\s(\d+\%)$/
 
 cpython3.8:
@@ -49,7 +48,6 @@ cpython3.8:
     - tox -avv
   script:
     - tox
-    - tox -e formatcheck
   coverage: /^TOTAL[\s\d%]+\s(\d+\%)$/
 
 pypy3.6:
@@ -63,9 +61,6 @@ pypy3.6:
     - tox -avv
   script:
     - tox
-    # Black fails on PyPy, I don't care that much.
-    # BUG: https://bitbucket.org/pypy/pypy/issues/2985/pypy36-osreplace-pathlike-typeerror
-    # - tox -e formatcheck
   coverage: /^TOTAL[\s\d%]+\s(\d+\%)$/
 
 pages:
@@ -87,3 +82,16 @@ pages:
     paths:
       - public
       - public/latex
+
+black:
+  stage: verify
+  allow_failure: true
+  image: python:3-alpine
+  before_script:
+    - pip install tox
+  script:
+    - tox -e formatcheck
+  only:
+    - master
+  except:
+    - schedules
