Updated tox to ignore empty blocks in coverage and be verbose in CI

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps = diff-cover
 passenv = http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_*
 extras = testing
 commands =
-    pytest --cov "hikari" --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch {posargs:.}
+    pytest --cov "hikari" -v --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch {posargs:.}
     coverage xml -o {toxworkdir}/coverage.xml
     coverage html -d {toxworkdir}/htmlcov
     diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
@@ -37,9 +37,10 @@ omit =
     hikari/__init__.py
     # Impossible to fully test on all platforms, as it is implementation specific.
     hikari/_compat.py
+timid = true
 
 [coverage:report]
-skip_covered = True
+skip_covered = False
 show_missing = True
 exclude_lines =
     \#\s*pragma: no cover
@@ -47,6 +48,7 @@ exclude_lines =
     ^\s*raise NotImplementedError\b
     ^\s*return NotImplemented\b
     ^\s*raise$
+    ^\s*pass$
     ^if __name__ == ['"]__main__['"]:$
 
 [testenv:docs]
