Fixed versioning config

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ keywords = discord, api, bot, chatbot, chat, voip, asyncio
 maintainer = Nekokatt
 author = Nekokatt
 url = https://gitlab.com/nekokatt/hikari
+version = 0.0.1a
 project_urls =
     Source=https://gitlab.com/nekokatt/hikari
     Tracker=https://gitlab.com/nekokatt/hikari/issues
