Reimplemented leaky bucket to allow custom quantities added/removed (helps http later) and to not spam coroutines forever

--- a/tox.ini
+++ b/tox.ini
@@ -35,8 +35,9 @@ parallel = true
 omit =
     # Should contain no useful logic.
     hikari/__init__.py
-    # Impossible to fully test on all platforms, as it is implementation specific.
-    hikari/_compat.py
+    # System specific. Other tests will fail if these don't work.
+    hikari/compat.py
+
 timid = true
 
 [coverage:report]
