--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,9 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.6, <3.9
+include_package_data = True
+package_dir =
+    =hikari
 install_requires =
     aiohttp>=3.5.4,<3.6.0
     dataclasses==0.6
@@ -46,6 +49,12 @@ install_requires =
 
 [options.packages.find]
 where = src
+exclude =
+    tests
+    .ci
+    .git
+    .tox
+    .pytest_cache
 
 [options.entry_points]
 console_scripts =
@@ -58,6 +67,7 @@ testing =
      pytest==4.4.1
      pytest-asyncio==0.10.0
      pytest-cov==2.7.1
+     pytest-html==1.20.0
 docs =
     sphinx==2.0.1
     sphinx-autodoc-typehints==1.6.0
