--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ packages = find:
 python_requires = >=3.6, <3.9
 include_package_data = True
 package_dir =
-    =hikari
+    =.
 install_requires =
     aiohttp>=3.5.4,<3.6.0
     dataclasses==0.6
@@ -48,7 +48,7 @@ install_requires =
     websockets==7.0
 
 [options.packages.find]
-where = src
+where = .
 exclude =
     tests
     .ci
@@ -68,13 +68,6 @@ testing =
      pytest-asyncio==0.10.0
      pytest-cov==2.7.1
      pytest-html==1.20.0
-docs =
-    sphinx==2.0.1
-    sphinx-autodoc-typehints==1.6.0
-    sphinxcontrib-asyncio==0.2.0
-    sphinx-bootstrap-theme==0.7.1
-sast = bandit
-format = black
 
 [bdist_wheel]
 universal = 1
