--- a/tox.ini
+++ b/tox.ini
@@ -4,22 +4,24 @@ envlist =
     py37
     py38
     pypy3
-    sast
+    bandit
+    black-check
+    report
+    docs
 
 isolated_build = true
 skip_missing_interpreters = true
 
 [testenv]
 description = run the tests with pytest under {basepython}
-setenv = COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-deps = diff-cover
+setenv =
+    COVERAGE_FILE = public/coverage-{envname}
 passenv = http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_*
 extras = testing
 commands =
+    python -c "__import__('os').makedirs('public',exist_ok=True)"
     pytest --cov "hikari" -v --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch {posargs:.}
-    coverage xml -o {toxworkdir}/coverage.xml
-    coverage html -d {toxworkdir}/htmlcov
-    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+    coverage xml -o public/coverage.{envname}.xml
 
 [pytest]
 addopts = -ra --showlocals
@@ -36,8 +38,7 @@ omit =
     # Should contain no useful logic.
     hikari/__init__.py
     # System specific. Other tests will fail if these don't work.
-    hikari/compat.py
-
+    hikari/compat/*
 timid = true
 
 [coverage:report]
@@ -52,31 +53,53 @@ exclude_lines =
     ^\s*pass$
     ^if __name__ == ['"]__main__['"]:$
 
+[testenv:report]
+description =
+    create several reports from test running and other analytics and dump them in the public directory.
+    This will require sh, grep, and find.
+deps =
+    bandit==1.6.0
+    diff-cover==2.1.0
+whitelist_externals =
+    sh
+commands =
+    sh .ci/aggregate-coverage.sh
+    sh .ci/changelog.sh
+
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
-extras = docs
-setenv=
+deps =
+    sphinx==2.0.1
+    sphinx-autodoc-typehints==1.6.0
+    sphinxcontrib-asyncio==0.2.0
+    sphinx-bootstrap-theme==0.7.1
+setenv =
     PAPER = a4
     SPHINXOPTS = -WTvvn
 commands =
     sphinx-apidoc -o docs/modules -e --implicit-namespaces -M hikari
-    sphinx-build docs public/html -b html
-    sphinx-build docs public/latex -b latex
+    sphinx-build docs public -b html
+    sphinx-build docs public/tex -b latex
 
-[testenv:sast]
-description = invoke static application security testing
-extras = sast
-commands = bandit -r hikari -n 3
+[testenv:bandit]
+description = invoke static application security testing with bandit
+deps = bandit
+commands = bandit --ini=tox.ini -r
 
-[testenv:formatcheck]
-description = check the source code formatting
-extras = format
+[bandit]
+targets = hikari
+recursive = true
+
+[testenv:black-check]
+description = check the source code formatting. Run `tox -e black-fix` to automatically fix any issues.
+deps =
+    black
 commands =
     black hikari --check
 
-[testenv:reformat]
+[testenv:black-fix]
 description = reformat any source code
-extras = format
+deps =
+    black
 commands =
     black hikari tests setup.py docs/conf.py
-
