--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ testing =
      asynctest==0.12.4
      async-timeout==3.0.1
      pytest==4.4.1
+     pytest-bdd==
      pytest-asyncio==0.10.0
      pytest-cov==2.7.1
      pytest-html==1.20.0
