Updated tox and requirements, added black fix for android
Continued testing of ratelimits to hit 100% on some edge cases. Fixed logging in gateway.

- Ratelimits now have hooks to allow callbacks when a ratelimit is hit to enable logging.
- Fixed logging consistency in gateway.
- Moved some stuff to `utils`
- Moved ToC around in docs.
- Fixed bandit not running in master in CI pipeline for report generation.
- _send_json now has a flag to enable bypassing the ratelimit (e.g. for heartbeating where it is important)

Added more opcodes and fixed some formatting of exceptions

Updated incorrect description in gateway constructor

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,8 +128,8 @@ bandit:
   before_script:
     - pip install tox
   script:
-    - bandit --ini=tox.ini -f html -o public/bandit.html -r || true
-    - tox -e bandit
+    - tox -e bandit || true
+    - tox -e bandit-report
   artifacts:
     paths:
       - public
