--- a/setup.cfg
+++ b/setup.cfg
@@ -13,13 +13,13 @@ project_urls =
     Tracker=https://gitlab.com/nekokatt/hikari/issues
     CI=https://gitlab.com/nekokatt/hikari/pipelines
 platforms = any
-license = MIT
+license = ZLIB
 license_file = LICENSE
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Framework :: AsyncIO
     Intended Audience :: Developers
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: zlib/libpng License  
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3.6
@@ -64,8 +64,8 @@ console_scripts =
 testing =
      asynctest==0.12.4
      async-timeout==3.0.1
+     coverage==4.5.3
      pytest==4.4.1
-     pytest-bdd==
      pytest-asyncio==0.10.0
      pytest-cov==2.7.1
      pytest-html==1.20.0
