--- a/tox.ini
+++ b/tox.ini
@@ -58,8 +58,8 @@ description =
     create several reports from test running and other analytics and dump them in the public directory.
     This will require sh, grep, and find.
 deps =
-    bandit==1.6.0
     diff-cover==2.1.0
+    coverage==4.5.3
 whitelist_externals =
     sh
 commands =
@@ -83,8 +83,17 @@ commands =
 
 [testenv:bandit]
 description = invoke static application security testing with bandit
-deps = bandit
-commands = bandit --ini=tox.ini -r
+deps = 
+    bandit==1.6.0
+commands =
+    bandit --ini=tox.ini -r
+
+[testenv:bandit-report]
+description = produces an HTML report of findings by bandit
+deps =
+    bandit==1.6.0
+commands =
+    bandit --ini=tox.ini -f html -o public/bandit.html -r || true
 
 [bandit]
 targets = hikari
@@ -94,12 +103,16 @@ recursive = true
 description = check the source code formatting. Run `tox -e black-fix` to automatically fix any issues.
 deps =
     black
+whitelist_externals =
+    python
 commands =
-    black hikari --check
+    python .ci/black.py hikari --check
 
 [testenv:black-fix]
 description = reformat any source code
 deps =
     black
+whitelist_externals =
+    python
 commands =
-    black hikari tests setup.py docs/conf.py
+    python .ci/black.py hikari tests setup.py docs/conf.py
