Implementing http ratelimits

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ skip_missing_interpreters = true
 description = run the tests with pytest under {basepython}
 setenv =
     COVERAGE_FILE = public/coverage-{envname}
-passenv = http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_*
+passenv =
+    http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_* RUN_SLOW_TESTS
 extras = testing
 commands =
     python -c "__import__('os').makedirs('public',exist_ok=True)"
