--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 
 variables:
   DOCKER_DRIVER: "overlay2"
+  RUN_SLOW_TESTS: "true"
 
 ###
 ### TEMPLATE TO RUN PYTEST.
@@ -15,7 +16,7 @@ variables:
   script:
     - mkdir public || true
     - tox -avv
-    - tox -e ${CI_JOB_NAME}
+    - tox --pastebin=all -e ${CI_JOB_NAME}
   coverage: /^TOTAL[\s\d%]+\s(\d+\%)$/
   artifacts:
     paths:
