--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ passenv =
 extras = testing
 commands =
     python -c "__import__('os').makedirs('public',exist_ok=True)"
-    pytest --cov "hikari" -v --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch {posargs:.}
+    pytest --cov "hikari" --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch --testdox {posargs:.} hikari_tests/
     coverage xml -o public/coverage.{envname}.xml
 
 [pytest]
