--- a/setup.cfg
+++ b/setup.cfg
@@ -64,11 +64,12 @@ console_scripts =
 testing =
      asynctest==0.12.4
      async-timeout==3.0.1
-     coverage==4.5.3
      pytest==4.4.1
      pytest-asyncio==0.10.0
+     coverage==4.5.3
      pytest-cov==2.7.1
      pytest-html==1.20.0
+     pytest-testdox==1.1.1
 
 [bdist_wheel]
 universal = 1
