Moved coverage aggregation, disabled timid runner.

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ omit =
     hikari/__init__.py
     # System specific. Other tests will fail if these don't work.
     hikari/compat/*
-timid = true
+timid = false
 
 [coverage:report]
 skip_covered = False
