--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,7 @@ setenv =
 commands =
     sphinx-apidoc -o docs/modules -e --implicit-namespaces -M hikari
     sphinx-build docs public -b html
-    sphinx-build docs public/tex -b latex
+    # sphinx-build docs public/tex -b latex
 
 [testenv:bandit]
 description = invoke static application security testing with bandit
