--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ source = hikari
 
 [coverage:run]
 branch = true
-parallel = true
+parallel = false
 omit =
     # Should contain no useful logic.
     hikari/__init__.py
@@ -45,6 +45,7 @@ timid = false
 [coverage:report]
 skip_covered = False
 show_missing = True
+precision = 1
 exclude_lines =
     \#\s*pragma: no cover
     ^\s*raise AssertionError\b
@@ -55,6 +56,7 @@ exclude_lines =
     ^if __name__ == ['"]__main__['"]:$
 
 [testenv:report]
+skip_install = true
 description =
     create several reports from test running and other analytics and dump them in the public directory.
     This will require sh, grep, and find.
@@ -68,6 +70,7 @@ commands =
     sh .ci/changelog.sh
 
 [testenv:docs]
+skip_install = true
 description = invoke sphinx-build to build the HTML docs
 deps =
     sphinx==2.0.1
@@ -83,6 +86,7 @@ commands =
     # sphinx-build docs public/tex -b latex
 
 [testenv:bandit]
+skip_install = true
 description = invoke static application security testing with bandit
 deps = 
     bandit==1.6.0
@@ -90,6 +94,7 @@ commands =
     bandit --ini=tox.ini -r
 
 [testenv:bandit-report]
+skip_install = true
 description = produces an HTML report of findings by bandit
 deps =
     bandit==1.6.0
@@ -101,6 +106,7 @@ targets = hikari
 recursive = true
 
 [testenv:black-check]
+skip_install = true
 description = check the source code formatting. Run `tox -e black-fix` to automatically fix any issues.
 deps =
     black
@@ -110,6 +116,7 @@ commands =
     python .ci/black.py hikari --check
 
 [testenv:black-fix]
+skip_install = true
 description = reformat any source code
 deps =
     black
