--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,7 +164,7 @@ aggregate-coverage:
     - py37
     - py38
   image: python:3-alpine
-  coverage: /^TOTAL[\s\d%]+\s(\d+\%)$/
+  coverage: /^TOTAL[\s\d%]+\s(\d+(?:\.\d+)?\%)$/
   before_script:
     - apk add git
     - pip install tox
