--- a/tox.ini
+++ b/tox.ini
@@ -96,7 +96,7 @@ description = produces an HTML report of findings by bandit
 deps =
     bandit==1.6.0
 commands =
-    bandit --ini=tox.ini -f html -o public/bandit.html -r || true
+    bandit --ini=tox.ini -f html -o public/bandit.html -r
 
 [bandit]
 targets = hikari
