--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = hikari-test
+name = hikari
 description = hikari is a customisable Discord API wrapper with a focus on easy use, customization, and sane defaults.
 long_description = file: README.md
 long_description_content_type = text/markdown
