--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -184,12 +184,16 @@ aggregate-coverage:
     paths:
       - public
 
+
+###
+### HANDLE DEPLOYING TO PYPI REPOSITORIES
+###
 .deploy:
   allow_failure: true
   stage: deploy
   image: python:3
   script:
-    - pip install -U setuptools wheel twine
+    - pip install -U setuptools wheel twine requests
     - cat $PYPIRC > $HOME/.pypirc
     - version="$(date +%Y.%m.%d).${PREFIX}${CI_PIPELINE_IID}"
     - echo "Version will become ${version}"
@@ -198,21 +202,32 @@ aggregate-coverage:
     - sed "0,/^version.*$/s//version = \"${version}\"/g" -i docs/conf.py
     - python setup.py sdist bdist_wheel
     - twine upload --repository pypi dist/*
+    - python .ci/notify.py "$version"
 
+###
+### HANDLE DEPLOYING TO OUR STAGING ENVIRONMENT ON test.pypi.org
+###
 deploy-to-staging:
   extends: .deploy
   only:
     - staging
+    - prod
   except:
     - tags
     - merge_requests
     - schedules
   variables:
     PREFIX: "dev"
+    RELEASE_WEBHOOK_NAME: "staging"
+    RELEASE_WEBHOOK_DESCRIPTION: "It is now available on https://test.pypi.org/"
+    RELEASE_WEBHOOK_COLOUR: "0xFFBF00"
   environment:
     name:
       staging
 
+###
+### HANDLE DEPLOYING TO OUR PRODUCTION ENVIRONMENT ON pypi.org
+###
 deploy-to-prod:
   extends: .deploy
   only:
@@ -223,6 +238,9 @@ deploy-to-prod:
     - schedules
   variables:
     PREFIX: ""
+    RELEASE_WEBHOOK_NAME: "prod"
+    RELEASE_WEBHOOK_DESCRIPTION: "pip install it from https://pypi.python.org/ now"
+    RELEASE_WEBHOOK_COLOUR: "0x00FF00"
   environment:
     name:
       prod
