Fixed issue with job config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -231,7 +231,7 @@ deploy-to-staging:
 deploy-to-prod:
   extends: .deploy
   only:
-    - prod
+    - master
   except:
     - tags
     - merge_requests
