Fixed black-fix tox job
This job was trying to run Black on the tests dir using the old name.
Just changed `tests` to `hikari_tests`.

--- a/tox.ini
+++ b/tox.ini
@@ -121,4 +121,4 @@ deps =
 whitelist_externals =
     python
 commands =
-    python .ci/black.py hikari tests setup.py docs/conf.py
+    python .ci/black.py hikari hikari_tests setup.py docs/conf.py
