--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Main requirements...
-aiohttp
-dataclasses  # py36 only
-websockets
+aiohttp>=3.5.4,<3.6.0
+dacite==1.0.2
+dataclasses==0.6
+python-dateutil==2.8.0
+websockets==7.0
 
 
 # CI
@@ -12,6 +14,7 @@ asynctest==0.12.4
 async-timeout==3.0.1
 coverage==4.5.3
 pytest==4.4.1
+pytest-aiohttp==0.3.0
 pytest-asyncio==0.10.0
 pytest-cov==2.7.1
 pytest-html==1.20.0
