--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,9 @@ package_dir =
     =.
 install_requires =
     aiohttp>=3.5.4,<3.6.0
+    dacite==1.0.2
     dataclasses==0.6
+    python-dateutil==2.8.0
     setuptools>=30.0.0
     websockets==7.0
 
@@ -67,6 +69,7 @@ testing =
      pytest==4.4.1
      pytest-asyncio==0.10.0
      coverage==4.5.3
+     pytest-aiohttp==0.3.0
      pytest-cov==2.7.1
      pytest-html==1.20.0
      pytest-testdox==1.1.1
