--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ keywords = discord, api, bot, chatbot, chat, voip, asyncio
 maintainer = Nekokatt
 author = Nekokatt
 url = https://gitlab.com/nekokatt/hikari
-version = 0.0.1-SNAPSHOT
+version = LATEST
 project_urls =
     Source=https://gitlab.com/nekokatt/hikari
     Tracker=https://gitlab.com/nekokatt/hikari/issues
@@ -19,7 +19,7 @@ classifiers =
     Development Status :: 2 - Pre-Alpha
     Framework :: AsyncIO
     Intended Audience :: Developers
-    License :: OSI Approved :: zlib/libpng License  
+    License :: OSI Approved :: zlib/libpng License 
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3.6
@@ -32,7 +32,6 @@ classifiers =
     Topic :: Communications :: Internet Phone
     Topic :: Communications :: Telephony
     Topic :: Software Development :: Libraries :: Python Modules
-    Topic :: Software Development :: Version Control :: Git
     Typing :: Typed
 
 [options]
@@ -64,15 +63,15 @@ console_scripts =
 
 [options.extras_require]
 testing =
-     asynctest==0.12.4
-     async-timeout==3.0.1
-     pytest==4.4.1
-     pytest-asyncio==0.10.0
-     coverage==4.5.3
-     pytest-aiohttp==0.3.0
-     pytest-cov==2.7.1
-     pytest-html==1.20.0
-     pytest-testdox==1.1.1
+    asynctest==0.12.4
+    async-timeout==3.0.1
+    coverage==4.5.3
+    pytest==4.4.1
+    pytest-asyncio==0.10.0
+    pytest-aiohttp==0.3.0
+    pytest-cov==2.7.1
+    pytest-html==1.20.0
+    pytest-testdox==1.1.1
 
 [bdist_wheel]
 universal = 1
