--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ public/
 .idea/
 
 # Visual Studio Code-generated files
-vscode/
 .settings/
 .project
 .vscode/
@@ -36,6 +35,7 @@ dist/
 
 # PyTest-generated files
 .pytest/
+.pytest_cache/
 
 # Pip stuff
 pip-wheel-metadata/
